# ShapeWars

./: .gitignore  CMakeLists.txt  HTTPServer.py  LICENSE  README.md  index.html  main.cpp  run.sh
ShapeWars/: AdjustableInterval.js  EntityManager.js  MiniMap.js  PlayerInput.js  PointDistributionUI.js  ToggleSwitch.js  UpgradeMenu.js  app.js  config.js  const.js  entity.js  function.js  handleInput.js  handleWebsocket.js  queue.js  readCompsFunc.js
ShapeWars/css/: PointDistributionUI.css  ToggleSwitch.css  UpgradeMenu.css
ShapeWars/lz4/: lz4.js  lz4.wasm
docs/: bugList.md  dev_log.md  protocol.md
entityDefs/: tankdefs.json
include/config/: config.h
include/ecs/: ComponentPool.h  ComponentTypeID.h  EntityManager.h  EntitySet.h  Group.h  View.h  fwd.h  utils.h
include/game/: GameLoop.h  factories.h  utils.h
include/net/: Acceptor.h  Channel.h  Epoll.h  EventLoop.h  InetAddress.h  SocketOps.h  TcpConnection.h  TcpServer.h  WebSocketFrame.h  WebSocketServer.h
include/utils/: Buffer.h  Logger.h  NonCopyable.h  ObjectPool.h  Signal.h  SparseMap.h  SparseSet.h  ThreadPool.h  Time.h  TypeID.h
src/ecs/: ComponentPool.cpp  EntityManager.cpp  EntitySet.cpp  Group.cpp
src/game/: GameLoop.cpp  factories.cpp  utils.cpp
src/net/: Acceptor.cpp  Channel.cpp  Epoll.cpp  EventLoop.cpp  InetAddress.cpp  SocketOps.cpp  TcpConnection.cpp  (+3 more)
test/: CMakeLists.txt  run.sh  testAcceptor_Epoll_eventLoop.cpp  testBuffer.cpp  testEntity.cpp  testEntitySystem.cpp  testGameLoop.cpp  testLz4.cpp  testSparseMap.cpp  testSparseSet.cpp  testTcpServer.cpp  testWebsocketServer.cpp
(+78 files in other folders)
